Fixed layout issue

--- a/src/components/pages/LayoutContainer.module.css
+++ b/src/components/pages/LayoutContainer.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 100px 0 0;
-    padding: 0 2em;
+    margin: 0;
+    padding: 3em;
     box-sizing: border-box;
     overflow: hidden;
     flex: 1;
