--- a/src/pages/Index.module.css
+++ b/src/pages/Index.module.css
@@ -14,5 +14,6 @@
 
 .HeroLayoutContainer {
     justify-content: center;
-    padding-bottom: 1.1em;
+    padding: 0;
+    margin: 100px 0 0;
 }
